--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "framer-motion": "^1.8.4",
-    "gatsby": "^2.19.7",
+    "gatsby": "^2.21.33",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -37,7 +37,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
